--- a/project/phase2/exec_summary.ipynb
+++ b/project/phase2/exec_summary.ipynb
@@ -18,7 +18,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "American football is one of the most popular sports in the United States, and it is also a very complex sport. There are many different factors that can affect the outcome of a game, including the players, the coaches, the plays, and the weather.\n",
+    "\n",
+    "Our project will focus on using data to analyze American football. We will use data from past games to identify trends and patterns. We will also be using team statistics and team data for past seasons and use the game and team data to predict the outcome of future games and for this current NFL season.\n",
+    "\n",
+    "We are interested in this project because we are big fanatics of the NFL and football in general. Also, we believe that this data could be used to improve the understanding of the sports and its results.\n",
+    "\n",
+    "Our data sources for the project include:\n",
+    "- Game statistics\n",
+    "- Team statistics\n",
+    "- Weather data\n",
+    "\n",
+    "We will use this data to answer the following research questions:\n",
+    "- What are the factors that most affect the outcome of an American football game?\n",
+    "- How can data be used to predict the outcome of future games?\n",
+    "\n",
+    "We believe that this project has the potential to make a significant contribution to the field of American football. We are excited to see what we can learn from the data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Description of Data Sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [NFL Box Scores](https://www.kaggle.com/datasets/grayengineering425/nfl-box-scores)\n",
+    "- Dataset includes box scores for every NFL game from 1960 to 2017\n",
+    "- Box scores include statistics for each home and away team for each game\n",
+    "- Another csv file includes the weather data for each game but we will not be using this data because it is not complete \n",
+    "\n",
+    "#### [NFL Game Results and Teams](https://www.kaggle.com/tobycrabtree/nfl-scores-and-betting-data)\n",
+    "- There are 2 main datasets that we will be using from this source\n",
+    "- The first dataset includes game results for every NFL game from 1966 to 2023\n",
+    "  - It also includes descriptive info such as if it is a playoff game, if it is played at a neutral site, and some weather information if available\n",
+    "  - It also includes betting data for each game such as the spread, over/under, and money line for the games\n",
+    "- The second dataset includes information regarding the teams in the NFL\n",
+    "  - It includes the team name, the team abbreviation, the conference, and the division\n",
+    "\n",
+    "#### [NFL Team Stats](https://www.kaggle.com/datasets/shanyachaubey/nfl20102021offdefplayoffteamstats)\n",
+    "- Dataset includes team statistics for each team for each season from 2010 to 2021\n",
+    "- The dataset includes basic information such as win-loss percentage and which season\n",
+    "- The dataset also includes more in depth information regarding offensive and defensive statistics such as points scored, yards gained, and turnovers\n",
+    "- It also includes playoff data for each team for each season"
    ]
   },
   {
@@ -32,7 +78,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### NFL Box Scores\n",
+    "- Observational unit in the box scores data set is each game played in the NFL from 1960 to 2017\n",
+    "- There is an emphasis on the statistics between each home and away team\n",
+    "- Data set was built by an individual contributor in 2017, and no additional information is provided in Kaggle about the data set\n",
+    "- The observational unit in the weather data set is each game played in the NFL from 1960 to 2013\n",
+    "    - Data after 2013 is not included in the data set\n",
+    "\n",
+    "#### NFL Game Results and Teams\n",
+    "- The observational unit in game results dataset is each game played in the NFL from 1966 to 2023\n",
+    "- The observational unit in the team dataset is each team in the NFL (including teams that are no longer in the NFL or have changed their names, i.e. the San Diego Chargers or the Washington Football Team)\n",
+    "- Data set was built from publicly available NFL data, weather provided by the NOAA, and betting data from a variety of sources but cross referenced with Pro Football Reference.\n",
+    "\n",
+    "#### NFL Team Stats\n",
+    "- The observational unit in the team stats dataset is each team in the NFL for each season from 2010 to 2021\n",
+    "    - So, the dataset includes data for each of the 32 teams for each of the seasons from 2010 to 2021\n",
+    "- This data was created using three different sources: pro-football-reference.com, covers.com, teamrankings.com\n",
+    "- The author used various CSV files and web scraping to combine 88 tables to create this data set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Description of Main Variables of Interest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NFL Box Scores\n",
+    "- In this dataset, the main variables of interest for us would be home and away teams' first downs, their net yards, the total plays, average gain, and time of possession\n",
+    "- We trimmed down to these variables because this data will be valuable when combining with the other datasets\n",
+    "- We deemed these variables important since they give a good summary of the game and how the statistics differed throughout the seasons when teams were at home or away\n",
+    "\n",
+    "\n",
+    "#### NFL Scores and Teams\n",
+    "- ScoresGame Resultset\n",
+    " Game Results main variables of interest in this dataset are the home and away teams' scores, the home and away teams' yards, and the home and away teams' turnovers  - The main variables of interest in this dataset are the home and away teams' scores, the betting favorite, the date of the game, and the weather \n",
+    "  - The score and date variables were taken from publicly available NFl data, the weather was taken from the NOAA, and the betting favorite was taken from a variety of sources but cross referenced with Pro Football Reference\n",
+    "- Team Dataset\n",
+    "  - The main variables of interest in this dataset are the team name, the team abbreviation, the conference, and the division\n",
+    "  - These variables are important because they will be used to merge the data with the other datasets\n",
+    "  - This data was taken from public NFL data\n",
+    "\n",
+    "#### NFL Team Stats\n",
+    "- The main variables of interest in this dataset are the team name, the season, the win-loss percentage, the point differential, the points scored per game, the points allowed per game, the yards gained per game, the yards allowed per game, and the possession time per game\n",
+    "- This data was taken from 3 sources: pro-football-reference.com, covers.com, teamrankings.come"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Description of Data Cleaning Process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NFL Box Scores\n",
+    "- We decided to only take into account seasons from 2010 and onwards since this would be more relevant to the current NFL season\n",
+    "- First we got the columns information and decided which variables were important to us\n",
+    "- Next, we dropped the columns that we did not need and converted the date column to a datetime object\n",
+    "- We also converted all the numeric columns to numeric data types\n",
+    "- We discarded the weather csv file in this data set\n",
+    "\n",
+    "#### NFL Game Results and Teams\n",
+    "- Game Result Dataset\n",
+    "  - We decided to only take into account seasons from 2010 and onwards since this would be more relevant to the current NFL season (especially so the players, coaches, and teams would be more relevant and similar to the current NFL season)\n",
+    "  - We first decided which columns were important to us and dropped the columns that we did not need\n",
+    "  - There were some rows missing data for scores, so we dropped those rows\n",
+    "  - We also converted the date column to a datetime object\n",
+    "  - There were some rows missing data for the weather, but we decided to keep them as the scores for those games were still present and we could still use that data for our analysis\n",
+    "- Team Dataset\n",
+    "  - We decided which columns were important to us and dropped the columns that we did not need such as the team conference and division before 2002 (especially because we are only considering seasons from 2010 and onwards)\n",
+    "  - There were some teams that did not have a current division, so we dropped those rows (these were teams that existed before 2002)\n",
+    "  - We realized that the conference value for the Jets was incorrect, so we manually changed that to the correct value\n",
+    "  - We sorted the teams by their division and conference to make it easier to read\n",
+    "  - We decided to keep the teams that are no longer in the NFL because their team name still exists in the game results and scores datasets as the teams changed names or moved cities (i.e. the San Diego Chargers to the Los Angeles Chargers or the Washington Football Team to the Washington Commanders)\n",
+    "    - This provides a way to connect the past team data with more recent team data as the names and cities of the teams have changed over time\n",
+    "\n",
+    "#### NFL Team Stats\n",
+    "- This data set only contains data from 2010 to 2021, so we did not need to filter out any data\n",
+    "- We decided which columns were important to us and dropped the columns that we did not need such as perc_punt_20, Turnover_perc, etc.\n",
+    "- There were no missing values in this data set, so we did not need to drop any rows"
    ]
   },
   {
@@ -45,14 +177,152 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### NFL Box Scores Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Correlation Between Various Variables in the Box Scores Dataset\n",
+    "    - Created this for our purpose of seeing which variables are correlated with each other\n",
+    "    \n",
+    "![Correlation Between Various Variables in the Box Scores Dataset](./images/heatmap.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Total Scores by Year\n",
+    "    - Created this to see how the total scores have changed throughout the years\n",
+    "\n",
+    "![Total Scores by Year](./images/box_score_total_scores.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Mean Net Yards by Year\n",
+    "    - Created this to see how the mean net yards have changed throughout the years for the 9ers\n",
+    "\n",
+    "![Mean Net Yards by Year](./images/9ers_box_score.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Team Stats Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 9ers Performance Over Time\n",
+    "    - Shows the percentage / points per game over the seasons for the 9ers\n",
+    "\n",
+    "![9ers Performance Over Time](./images/team_stats_9ers.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Patriots Performance Over Time\n",
+    "    - Shows the percentage / points per game over the seasons for the Patriots\n",
+    "\n",
+    "![Patriots Performance Over Time](./images/team_stats_pats.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Chiefs Performance Over Time\n",
+    "    - Shows the percentage / points per game over the seasons for the Chiefs\n",
+    "\n",
+    "![Chiefs Performance Over Time](./images/team_stats_chiefs.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Distribution of Points Allowed Per Game\n",
+    "    - Can demonstrate the defensive strength of a team\n",
+    "\n",
+    "![Distribution of Points Allowed Per Game](./images/team_stats_distribution.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Team Comparison of Win-Loss Percent vs Points Scored Per Game\n",
+    "\n",
+    "![Team Comparison of Win-Loss Percent vs Points Scored Per Game](./images/team_stats_win_loss_percent.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Offensive vs Defensive Performance\n",
+    "    - Relationship between points allowed and points scored for each team\n",
+    "\n",
+    "![Offensive vs Defensive Performance](./images/team_stats_off_def.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NFL Game Data Visualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Distribution of Scores\n",
+    "    - Shows the distribution of scores for home teams\n",
+    "\n",
+    "![Distribution of Scores](./images/game_data_dist_home.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Chiefs scoring over the Seasons for home and away games\n",
+    "\n",
+    "![Chiefs scoring over the Seasons for home and away games](./images/game_data_chiefs.png)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
