--- a/project/phase2/visualization.ipynb
+++ b/project/phase2/visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
        "4      120.2      225.0       23.4  0.540000         276.8              14.5  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "WinLoss perc",
          "orientation": "v",
          "showlegend": true,
@@ -1271,7 +1271,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "PointperG",
          "orientation": "v",
          "showlegend": true,
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "WinLoss perc",
          "orientation": "v",
          "showlegend": true,
@@ -2240,7 +2240,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "PointperG",
          "orientation": "v",
          "showlegend": true,
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3163,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "WinLoss perc",
          "orientation": "v",
          "showlegend": true,
@@ -3209,7 +3209,7 @@
          "marker": {
           "symbol": "circle"
          },
-         "mode": "markers+lines",
+         "mode": "lines+markers",
          "name": "PointperG",
          "orientation": "v",
          "showlegend": true,
@@ -4112,7 +4112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5393,7 +5393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -8155,7 +8155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -10085,7 +10085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -10233,7 +10233,7 @@
        "4               1.0  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10246,7 +10246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -14725,7 +14725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -15667,7 +15667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
