--- a/exams/exam2/DATA_301_Exam_2_Information.ipynb
+++ b/exams/exam2/DATA_301_Exam_2_Information.ipynb
@@ -1,28 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.8"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -38,33 +14,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The exam is cumulative, with an emphasis on material from Day 10: Introduction to Text Data through Day 18: Estimating Test Metrics for Classification Models"
-      ],
       "metadata": {
         "id": "FyXhu_M_R9bz"
-      }
+      },
+      "source": [
+        "The exam is cumulative, with an emphasis on material from Day 10: Introduction to Text Data through Day 18: Estimating Test Metrics for Classification Models"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Some of the questions on the exam might be deliberately ambiguous. I want to see how you take an ambiguous, real-world question and translate it into a concrete question that can be answered with data. For some problems, several answers might be acceptable, as long as you do a good job justifying your approach and answer. Just answer each question to the best of your ability according to _your_ interpretation of the question, and be clear about how you are interpreting the question."
-      ],
       "metadata": {
         "id": "Dwy0uewA8iYa"
-      }
+      },
+      "source": [
+        "Some of the questions on the exam might be deliberately ambiguous. I want to see how you take an ambiguous, real-world question and translate it into a concrete question that can be answered with data. For some problems, several answers might be acceptable, as long as you do a good job justifying your approach and answer. Just answer each question to the best of your ability according to _your_ interpretation of the question, and be clear about how you are interpreting the question."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "You will need to know how to read in data sets from a file (e.g., `read_csv`). You will NOT be required to scrape data from webpages or APIs during the exam. However, I might give you data that I pulled from an API or webpage or you might need to use the documentation of the API or the source of the webpage."
-      ],
       "metadata": {
         "id": "A5KpMQoa82gF"
-      }
+      },
+      "source": [
+        "You will need to know how to read in data sets from a file (e.g., `read_csv`). You will NOT be required to scrape data from webpages or APIs during the exam. However, I might give you data that I pulled from an API or webpage or you might need to use the documentation of the API or the source of the webpage."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "XMQ91_cUwWwr"
+      },
       "source": [
         "## What is allowed during the exam\n",
         "\n",
@@ -84,26 +63,26 @@
         "One example: you are allowed to use Google to find the documentation for a Pandas function to see what arguments are available, but you need to cite the websites you visit. You are NOT allowed to ask Google or AI or whatever to write the code for you.\n",
         "\n",
         "**If you are not sure if something is allowed, ASK ME before doing it.**"
-      ],
-      "metadata": {
-        "id": "XMQ91_cUwWwr"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "eofNv3t19RAg"
+      },
       "source": [
         "## Prepaing for the Exam\n",
         "\n",
         "You should start by reviewing the reading, in class notebooks, and assignments. Those items provide the most representative sample of the kinds of problems you will see on the exam.\n",
         "\n",
         "There are also a few practice problems below. These are just a few examples of the kinds of problems you might see on the exam. This is NOT a representative sample of problems, and certainly NOT an exhaustive list of the kinds of problems you'll see on the exam. Do NOT study only the following problems."
-      ],
-      "metadata": {
-        "id": "eofNv3t19RAg"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4idtb9urdrYx"
+      },
       "source": [
         "## Problem\n",
         "\n",
@@ -117,13 +96,13 @@
         "model = LinearRegression()\n",
         "model.fit(X_train, y_train)\n",
         "```\n"
-      ],
-      "metadata": {
-        "id": "4idtb9urdrYx"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mtcdDHx7iQy3"
+      },
       "source": [
         "a) The data for the two homes that Walter is considering buying are stored in a different DataFrame, `df_new_homes`. Explain why the following code would not necessarily produce the correct predictions from the fitted\n",
         "model above.\n",
@@ -132,13 +111,20 @@
         "X_test = pd.get_dummies(df_new_homes[[\"sqft\", \"bed\", \"bath\", \"style\"]])\n",
         "model.predict(X_test)\n",
         "```"
-      ],
-      "metadata": {
-        "id": "mtcdDHx7iQy3"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**There might be a mismatch for the dummies for 'style' / the columns that it would result in causing an error.**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NBtb2sE8UIc8"
+      },
       "source": [
         "b) Walter trains his model using only the first 50 observations and evaluates the model based on the remaining 50 observations.\n",
         "\n",
@@ -148,13 +134,22 @@
         "```\n",
         "\n",
         "Explain why and how Walter could improve his evaluation process. You should NOT write code; explain in words."
-      ],
-      "metadata": {
-        "id": "NBtb2sE8UIc8"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "__One potential way to improve his evaluation process is to use a holdout set where Walter could split the data into a training set and holdout set. He would train on the training set and then evaluate on the holdout set. This would prevent overfitting.__\n",
+        "\n",
+        "__Another way is to use cross-validation where data is split into multiple folds. The model should be trained on some folds and then evaluated on the remaining fold. Repeating this process with different folds would allow for a more robust evaluation of the model.__ "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NFWTQ8z3uxQw"
+      },
       "source": [
         "c) Anna fits a 2-nearest neighbors regression model to predict price from square footage, number of bedrooms, number of bathrooms, and the house style. You can assume that the model is fit correctly.\n",
         "\n",
@@ -169,13 +164,20 @@
         "|    600000 |     1800 |       3 |      1.5 | single family |\n",
         "\n",
         "What price would this model predict for a 1500 square foot, 3 bedroom, 1.5 bathroom single family home? Provide a value and explain your reasoning."
-      ],
-      "metadata": {
-        "id": "NFWTQ8z3uxQw"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "__$650,000 which is the avg between the first entry and the last entry as those would be considered as the 2-nearest neighbors.__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e-ZXkZRGl3i6"
+      },
       "source": [
         "d) Anna fits a $k$-nearest neighbors regression model to predict sales price, for different values of $k$, using the training data on the 100 houses in `df_housing`. Here is Anna's code; you can assume that appropriate steps are included in `...` below.\n",
         "\n",
@@ -193,35 +195,35 @@
         "(A) `-cross_val_score(pipeline, X_train, y_train, cv = 10, scoring = neg_mean_squared_error).mean()`\n",
         "\n",
         "(B) `((y_train - pipeline.predict(X_train)) ** 2).mean()`"
-      ],
-      "metadata": {
-        "id": "e-ZXkZRGl3i6"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "<img src = 'https://drive.google.com/uc?id=1ZIhkTmJqFcby5OHzSIY8_tT1R5hEar2X'>"
-      ],
       "metadata": {
         "id": "Oq5TgpBkTV0Q"
-      }
+      },
+      "source": [
+        "<img src = 'https://drive.google.com/uc?id=1ZIhkTmJqFcby5OHzSIY8_tT1R5hEar2X'>"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "2gQ-rA1TA7bO"
+      },
       "source": [
         "## Problem\n",
         "\n",
         "This question involves the wines data set (https://dlsun.github.io/pods/data/wines.csv) which contains data about the chemical composition of various wines. We want to use $k$-nearest neighbors to predict the color (red or white) of a wine using the two features: **sulphates** and **alcohol**.\n",
         "\n",
         "Find the value of $k$ between 1 and 20 that optimizes the average precision score."
-      ],
-      "metadata": {
-        "id": "2gQ-rA1TA7bO"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kRWUDK0QbpW1"
+      },
       "source": [
         "## Problem\n",
         "\n",
@@ -238,10 +240,7 @@
         "- (B) **description**, **roadClosed**, and **elevation**\n",
         "\n",
         "Which of these two models would you prefer? Justify your choice with appropriate analysis."
-      ],
-      "metadata": {
-        "id": "kRWUDK0QbpW1"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -256,5 +255,29 @@
         "Study the profile of user 2855 in the data set, especially what they wrote in `essay9` about what they are looking for in a partner. Recommend five users in this data set that you think would be most compatible with this user."
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
