--- a/project/phase2/exec_summary.ipynb
+++ b/project/phase2/exec_summary.ipynb
@@ -188,7 +188,7 @@
     "- Correlation Between Various Variables in the Box Scores Dataset\n",
     "    - Created this for our purpose of seeing which variables are correlated with each other\n",
     "    \n",
-    "![Correlation Between Various Variables in the Box Scores Dataset](./images/heatmap.png)"
+    "![Correlation Between Various Variables in the Box Scores Dataset](../images/heatmap.png)"
    ]
   },
   {
@@ -198,7 +198,7 @@
     "- Total Scores by Year\n",
     "    - Created this to see how the total scores have changed throughout the years\n",
     "\n",
-    "![Total Scores by Year](./images/box_score_total_scores.png)"
+    "![Total Scores by Year](../images/box_score_total_scores.png)"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "- Mean Net Yards by Year\n",
     "    - Created this to see how the mean net yards have changed throughout the years for the 9ers\n",
     "\n",
-    "![Mean Net Yards by Year](./images/9ers_box_score.png)"
+    "![Mean Net Yards by Year](../images/9ers_box_score.png)"
    ]
   },
   {
@@ -225,7 +225,7 @@
     "- 9ers Performance Over Time\n",
     "    - Shows the percentage / points per game over the seasons for the 9ers\n",
     "\n",
-    "![9ers Performance Over Time](./images/team_stats_9ers.png)"
+    "![9ers Performance Over Time](../images/team_stats_9ers.png)"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "- Patriots Performance Over Time\n",
     "    - Shows the percentage / points per game over the seasons for the Patriots\n",
     "\n",
-    "![Patriots Performance Over Time](./images/team_stats_pats.png)"
+    "![Patriots Performance Over Time](../images/team_stats_pats.png)"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "- Chiefs Performance Over Time\n",
     "    - Shows the percentage / points per game over the seasons for the Chiefs\n",
     "\n",
-    "![Chiefs Performance Over Time](./images/team_stats_chiefs.png)"
+    "![Chiefs Performance Over Time](../images/team_stats_chiefs.png)"
    ]
   },
   {
@@ -255,7 +255,7 @@
     "- Distribution of Points Allowed Per Game\n",
     "    - Can demonstrate the defensive strength of a team\n",
     "\n",
-    "![Distribution of Points Allowed Per Game](./images/team_stats_distribution.png)"
+    "![Distribution of Points Allowed Per Game](../images/team_stats_distribution.png)"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "source": [
     "- Team Comparison of Win-Loss Percent vs Points Scored Per Game\n",
     "\n",
-    "![Team Comparison of Win-Loss Percent vs Points Scored Per Game](./images/team_stats_win_loss_percent.png)"
+    "![Team Comparison of Win-Loss Percent vs Points Scored Per Game](../images/team_stats_win_loss_percent.png)"
    ]
   },
   {
@@ -274,7 +274,7 @@
     "- Offensive vs Defensive Performance\n",
     "    - Relationship between points allowed and points scored for each team\n",
     "\n",
-    "![Offensive vs Defensive Performance](./images/team_stats_off_def.png)"
+    "![Offensive vs Defensive Performance](../images/team_stats_off_def.png)"
    ]
   },
   {
@@ -291,7 +291,7 @@
     "- Distribution of Scores\n",
     "    - Shows the distribution of scores for home teams\n",
     "\n",
-    "![Distribution of Scores](./images/game_data_dist_home.png)"
+    "![Distribution of Scores](../images/game_data_dist_home.png)"
    ]
   },
   {
@@ -300,7 +300,7 @@
    "source": [
     "- Chiefs scoring over the Seasons for home and away games\n",
     "\n",
-    "![Chiefs scoring over the Seasons for home and away games](./images/game_data_chiefs.png)"
+    "![Chiefs scoring over the Seasons for home and away games](../images/game_data_chiefs.png)"
    ]
   }
  ],
