--- a/project/phase3/details.ipynb
+++ b/project/phase3/details.ipynb
@@ -6546,6 +6546,78 @@
     "results_df.sort_values(by=[\"Accuracy\"], ascending=False, inplace=True)\n",
     "results_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting 49ers vs. Seahawks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "49ers Last 5:\n",
+    "1. 17 scored, 31 allowed, 460 net yards, 24 first downs, 28:37 t.o.p., 56 total plays, 8.2 avg gain\n",
+    "\n",
+    "2. 34 scored, 3 allowed, 437 net yards, 20 first downs, 33:11 t.o.p., 60 total plays, 7.3 avg gain\n",
+    "\n",
+    "3. 27 scored, 14 allowed, 420 net yards, 22 first downs, 30:51 t.o.p., 59 total plays, 7.1 avg gain\n",
+    "\n",
+    "4. 31 scored, 13 allowed, 377 net yards, 23 first downs, 35:30 t.o.p., 65 total plays, 5.8 avg gain\n",
+    "\n",
+    "5. 42 scored, 19 allowed, 456 net yards, 24 first downs, 28:21 t.o.p., 57 total plays, 8.0 avg gain\n",
+    "\n",
+    "Average: 30.2 scored, 16.0 allowed, 430.0 net yards, 22.6 first downs, 31:18 t.o.p., 59.4 total plays, 7.3 avg gain\n",
+    "\n",
+    "Seahawks Last 5:\n",
+    "1. 3 scored, 37 allowed, 151 net yards, 6 first downs, 19:56 t.o.p., 47 total plays, 3.2 avg gain\n",
+    "\n",
+    "2. 29 scored, 26 allowed, 489 net yards, 27 first downs, 30:27 t.o.p., 74 total plays, 6.6 avg gain\n",
+    "\n",
+    "3. 16 scored, 17 allowed, 291 net yards, 16 first downs, 32:06 t.o.p., 63 total plays, 4.6 avg gain\n",
+    "\n",
+    "4. 13 scored, 31 allowed, 220 net yards, 14 first downs, 24:30 t.o.p., 54 total plays, 4.1 avg gain\n",
+    "\n",
+    "5. 35 scored, 41 allowed, 406 net yards, 25 first downs, 23:33 t.o.p., 64 total plays, 6.3 avg gain\n",
+    "\n",
+    "Average: 19.2 scored, 30.4 allowed, 311.4 net yards, 17.6 first downs, 26:18 t.o.p., 60.4 total plays, 5.6 avg gain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a dataframe with the above data\n",
+    "niners_hawks_last_5 = pd.DataFrame(columns=[\"home_id\", \"away_id\", \"away_last_n_score\", \"away_last_n_allowed\", \"away_last_n_time_of_possession\", \"away_last_n_first_downs\",\n",
+    "                                            \"away_last_n_total_plays\", \"away_last_n_avg_gain\", \"home_last_n_score\", \"home_last_n_allowed\", \"home_last_n_time_of_possession\",\n",
+    "                                            \"home_last_n_first_downs\", \"home_last_n_total_plays\", \"home_last_n_avg_gain\"])\n",
+    "# SEA last 5: 19.2 scored, 30.4 allowed, 311.4 net yards, 17.6 first downs, 26:18 t.o.p., 60.4 total plays, 5.6 avg gain\n",
+    "# SFO: last 5: 30.2 scored, 16.0 allowed, 430.0 net yards, 22.6 first downs, 31:18 t.o.p., 59.4 total plays, 7.3 avg gain\n",
+    "niners_hawks_last_5 = pd.concat([niners_hawks_last_5, pd.DataFrame({\"home_id\": \"SF\", \"away_id\": \"SEA\", \"away_last_n_score\": 19.2, \n",
+    "                                                                    \"away_last_n_allowed\": 30.4, \"away_last_n_time_of_possession\": 26.3, \n",
+    "                                                                    \"away_last_n_first_downs\": 17.6, \"away_last_n_total_plays\": 60.4, \n",
+    "                                                                    \"away_last_n_avg_gain\": 5.6, \"home_last_n_score\": 30.2, \"home_last_n_allowed\": 16.0, \n",
+    "                                                                    \"home_last_n_time_of_possession\": 31.3, \"home_last_n_first_downs\": 22.6,\n",
+    "                                                                    \"home_last_n_total_plays\": 59.4, \"home_last_n_avg_gain\": 7.3}, index=[0])], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "san_fran_seattle_model = knn_multi_output(df_prediction, 1500)[0]\n",
+    "\n",
+    "# predict the score of the San Francisco 49ers vs. Seattle Seahawks game\n",
+    "san_fran_seattle_model.predict(X=niners_hawks_last_5[['home_id', 'away_id', 'away_last_n_score', 'away_last_n_allowed', 'away_last_n_time_of_possession', 'away_last_n_first_downs', \n",
+    "                                                          'away_last_n_total_plays', 'away_last_n_avg_gain', 'home_last_n_score', 'home_last_n_allowed', \n",
+    "                                                          'home_last_n_time_of_possession', 'home_last_n_first_downs', 'home_last_n_total_plays', 'home_last_n_avg_gain']]),"
+   ]
   }
  ],
  "metadata": {
