--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -164,7 +164,12 @@
     "#### NFL Team Stats\n",
     "- This data set only contains data from 2010 to 2021, so we did not need to filter out any data\n",
     "- We decided which columns were important to us and dropped the columns that we did not need such as perc_punt_20, Turnover_perc, etc.\n",
-    "- There were no missing values in this data set, so we did not need to drop any rows"
+    "- There were no missing values in this data set, so we did not need to drop any rows\n",
+    "\n",
+    "#### Setting Up Data\n",
+    "- We realized that it would be best if we joined the box scores dataset with the game results dataset, so that we get more information and features for each game that we could build a model off of\n",
+    "- Before merging, we still had a little cleaning we had to do in order to make sure that each dataset and the same features (in the same format) to merge on\n",
+    "- "
    ]
   },
   {
@@ -179,16 +184,6 @@
    "metadata": {},
    "source": [
     "#### NFL Box Scores Visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Correlation Between Various Variables in the Box Scores Dataset\n",
-    "    - Created this for our purpose of seeing which variables are correlated with each other\n",
-    "    \n",
-    "![Correlation Between Various Variables in the Box Scores Dataset](../images/heatmap.png)"
    ]
   },
   {
@@ -223,9 +218,10 @@
    "metadata": {},
    "source": [
     "- 9ers Performance Over Time\n",
-    "    - Shows the percentage / points per game over the seasons for the 9ers\n",
+    "    - Shows the percentage / points per game over the seasons for the 9ers:\n",
     "\n",
-    "![9ers Performance Over Time](../images/team_stats_9ers.png)"
+    "![9ers Performance Over Time](../images/team_stats_9ers.png)\n",
+    "![9ers Performance Over Time](../images/team_stats_9ers_1.png)"
    ]
   },
   {
